--- a/core/templates/eveditor.html
+++ b/core/templates/eveditor.html
@@ -8,7 +8,12 @@
         </div>
 
         <div class="modal-body">
-            {{form.as_p}}
+            <form action="" method="post">
+                {%csrf_token%}
+                {{form.as_p}}
+                <input type="submit">
+            </form>
+
         </div>
         <div class="modal-footer">
 
